# watch-mon

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: watch-mon.mdc
tests/: test_monad.py
watch_mon/: __init__.py  cli.py  config.py
watch_mon/api/: mcp_server.py
watch_mon/core/: __init__.py  monad.py
