[project]
name = "watch-mon"
version = "0.1.0"
description = "Monad Chain Protocol - A tool for monitoring and analyzing dApps on Monad testnet"
authors = [
    {name = "Edison", email = "zhangn661@gmail.com"},
]
dependencies = [
    "web3>=6.0.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "mcp>=1.6.0",
    "tqdm>=4.67.1",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.16.0",
    "httpx>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 128
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
